--- a/app/assets/stylesheets/styles/home.scss
+++ b/app/assets/stylesheets/styles/home.scss
@@ -175,9 +175,6 @@ div#donate-button-container  {
     }
 }
 
-.littlesis_carousel a.buttons img {
-    cursor: pointer;
-}
 
 #join-page-get-involved p {
     text-align: justify;
